# idea2thesis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
artifacts/verification/: README.md  baseline.txt
backend/: pyproject.toml
backend/src/idea2thesis/: agents.py  api.py  config.py  contracts.py  db.py  execution_policy.py  executor.py  git_ops.py  job_store.py  main.py  orchestrator.py  parser.py  secrets.py  services.py  storage.py  worker.py
backend/src/idea2thesis/providers/: base.py  openai_compatible.py  runner.py
backend/tests/: test_api.py  test_bootstrap_script.py  test_contracts.py  test_db.py  test_dev_script.py  test_end_to_end.py  test_execution_policy.py  test_executor.py  test_git_ops.py  test_job_store.py  test_orchestrator.py  test_parser.py  test_provider.py  test_runtime_config_contracts.py  test_secrets.py  test_smoke.py  test_storage.py  test_worker.py
docs/releases/: v0.1.0.md
docs/superpowers/plans/: 2026-03-24-idea2thesis.md  2026-03-25-agent-config-persistence.md  2026-03-25-async-job-runtime.md  2026-03-25-frontend-job-polling.md  2026-03-25-history-workbench.md  2026-03-25-real-multi-agent-execution.md
docs/superpowers/specs/: 2026-03-24-idea2thesis-design.md  2026-03-25-agent-config-persistence-design.md  (+4 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.integration.test.tsx  App.test.tsx  App.tsx  api.test.ts  api.ts  app.css  i18n.tsx  main.tsx  types.ts  viteProxy.test.ts
scripts/: bootstrap.sh  dev.sh
(+13 files in other folders)
