[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idea2thesis-backend"
version = "0.1.0"
description = "Local multi-agent thesis project generator backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "python-docx>=1.1.2",
  "httpx>=0.28.0",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/idea2thesis"]
